logs/django-postal.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_countries'...
Listing './lib/python3.5/site-packages/django_countries/locale'...
Listing './lib/python3.5/site-packages/django_countries/locale/ar'...
Listing './lib/python3.5/site-packages/django_countries/locale/ar/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/bg'...
Listing './lib/python3.5/site-packages/django_countries/locale/bg/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/ca'...
Listing './lib/python3.5/site-packages/django_countries/locale/ca/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/cs'...
Listing './lib/python3.5/site-packages/django_countries/locale/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/de'...
Listing './lib/python3.5/site-packages/django_countries/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/el'...
Listing './lib/python3.5/site-packages/django_countries/locale/el/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/en'...
Listing './lib/python3.5/site-packages/django_countries/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/eo'...
Listing './lib/python3.5/site-packages/django_countries/locale/eo/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/es'...
Listing './lib/python3.5/site-packages/django_countries/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/et'...
Listing './lib/python3.5/site-packages/django_countries/locale/et/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/fa'...
Listing './lib/python3.5/site-packages/django_countries/locale/fa/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/fi'...
Listing './lib/python3.5/site-packages/django_countries/locale/fi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/fr'...
Listing './lib/python3.5/site-packages/django_countries/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/hr'...
Listing './lib/python3.5/site-packages/django_countries/locale/hr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/hu'...
Listing './lib/python3.5/site-packages/django_countries/locale/hu/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/it'...
Listing './lib/python3.5/site-packages/django_countries/locale/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/ja'...
Listing './lib/python3.5/site-packages/django_countries/locale/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/ko_KR'...
Listing './lib/python3.5/site-packages/django_countries/locale/ko_KR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/lt'...
Listing './lib/python3.5/site-packages/django_countries/locale/lt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/lv'...
Listing './lib/python3.5/site-packages/django_countries/locale/lv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/nb'...
Listing './lib/python3.5/site-packages/django_countries/locale/nb/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/nl'...
Listing './lib/python3.5/site-packages/django_countries/locale/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/pl'...
Listing './lib/python3.5/site-packages/django_countries/locale/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/pt_BR'...
Listing './lib/python3.5/site-packages/django_countries/locale/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/pt_PT'...
Listing './lib/python3.5/site-packages/django_countries/locale/pt_PT/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/ru'...
Listing './lib/python3.5/site-packages/django_countries/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/sk'...
Listing './lib/python3.5/site-packages/django_countries/locale/sk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/sv'...
Listing './lib/python3.5/site-packages/django_countries/locale/sv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/tr_TR'...
Listing './lib/python3.5/site-packages/django_countries/locale/tr_TR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/uk'...
Listing './lib/python3.5/site-packages/django_countries/locale/uk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/zh-Hans'...
Listing './lib/python3.5/site-packages/django_countries/locale/zh-Hans/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/locale/zh_CN'...
Listing './lib/python3.5/site-packages/django_countries/locale/zh_CN/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/django_countries/static'...
Listing './lib/python3.5/site-packages/django_countries/static/flags'...
Listing './lib/python3.5/site-packages/django_countries/templatetags'...
Listing './lib/python3.5/site-packages/django_countries/tests'...
Listing './lib/python3.5/site-packages/django_countries-5.0.dist-info'...
Listing './lib/python3.5/site-packages/django_postal-0.96.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/postal'...
Listing './lib/python3.5/site-packages/postal/api'...
Listing './lib/python3.5/site-packages/postal/forms'...
Listing './lib/python3.5/site-packages/postal/forms/ar'...
Listing './lib/python3.5/site-packages/postal/forms/co'...
Listing './lib/python3.5/site-packages/postal/forms/cz'...
Listing './lib/python3.5/site-packages/postal/forms/de'...
Listing './lib/python3.5/site-packages/postal/forms/gb'...
Listing './lib/python3.5/site-packages/postal/forms/ie'...
Listing './lib/python3.5/site-packages/postal/forms/it'...
Listing './lib/python3.5/site-packages/postal/forms/mx'...
Listing './lib/python3.5/site-packages/postal/forms/nl'...
Listing './lib/python3.5/site-packages/postal/forms/pl'...
Listing './lib/python3.5/site-packages/postal/forms/ru'...
Listing './lib/python3.5/site-packages/postal/forms/us'...
Compiling './lib/python3.5/site-packages/postal/resource.py'...
***   File "./lib/python3.5/site-packages/postal/resource.py", line 242
    except NoReverseMatch, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/postal/templates'...
Listing './lib/python3.5/site-packages/postal/templates/postal'...
Listing './lib/python3.5/site-packages/postal/templatetags'...
Listing './lib/python3.5/site-packages/postal/tests'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
